# sebo-qa-engine

./: .gitignore  .releaserc.json  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pr-engine  python-qa.yml  qa-self-audit.yml
docs/architecture/: advanced-usage.md  sebco-qa-engine.md
src/sebco_qa_engine/: __init__.py
src/sebco_qa_engine/aggregation/: __init__.py  aggregator.py  defaults.py  models.py  policies.py
src/sebco_qa_engine/analyzers/: __init__.py
src/sebco_qa_engine/analyzers/python/: __init__.py
src/sebco_qa_engine/analyzers/python/bandit/: __init__.py  analyzer.py  config.py  models.py
src/sebco_qa_engine/analyzers/python/coverage/: __init__.py  analyzer.py  config.py
src/sebco_qa_engine/analyzers/python/flake8/: __init__.py  analyzer.py  config.py
src/sebco_qa_engine/analyzers/python/mutmut/: __init__.py  analyzer.py  config.py  models.py
src/sebco_qa_engine/analyzers/python/radon/: __init__.py  analyzer.py  config.py
src/sebco_qa_engine/core/: __init__.py  base_analyzer.py  models.py
src/sebco_qa_engine/orchestration/: __init__.py  runner.py
src/sebco_qa_engine/utils/: __init__.py  text.py
tests/unit/aggregation/: test_aggregator.py  test_defaults.py  test_models.py  test_policies.py
tests/unit/analyzers/python/bandit/: test_analyzer.py
tests/unit/analyzers/python/coverage/: test_analyzer.py
tests/unit/analyzers/python/flake8/: test_analyzer.py
tests/unit/analyzers/python/mutmut/: test_analyzer.py
tests/unit/analyzers/python/radon/: test_analyzer.py
tests/unit/core/: test_models.py
tests/unit/orchestration/: test_runner.py
tests/unit/utils/: test_text.py
