[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sebco-qa-engine"
version = "0.1.0"
description = "Reusable QA engine for multi-language quality validation, artifact generation and PR reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "sebco-labs" }
]
keywords = [
  "qa",
  "quality",
  "ci",
  "github-actions",
  "automation",
  "testing",
  "artifacts",
  "reporting"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
# Analyzer tools — install in the target repo, not in the engine itself.
# Listed here for documentation purposes only.
# analyzers = [
#   "mutmut>=2.5",
#   "flake8>=7.0",
#   "coverage>=7.0",
#   "bandit>=1.8",
#   "radon>=6.0",
# ]

dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mutmut>=2.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -v"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.coverage.run]
source = ["src/sebco_qa_engine"]

[tool.coverage.report]
show_missing = true
skip_empty = true
